<!-- 
Licensed Materials - Property of IBM

5747-SM3

(C) Copyright IBM Corp. 1999, 2012 All Rights Reserved.

US Government Users Restricted Rights - Use, duplication or
disclosure restricted by GSA ADP Schedule Contract with
IBM Corp.
 -->
<resources>
<string-array name="switchtypes">
<item>Rotary Type[ Rising Sun ]</item>
<item>Dip Switch Type [ ELRO ]</item>
<item>Blinds [ Arexim ]</item>
</string-array>

    <string name="app_name">Irdroid Cloud</string>
    <string name="menu_settings">Settings</string>
      <string name="location">Location</string>
      <string name="activity_order">Irdroid Wizard</string>
    <string name="port">Port</string>
    <string name="connect">Connect</string>
 <string name="channel">Channel</string>
 <string name="channelHint">Switch channel</string>
  <string name="idHint">Unit Barcode</string>
   <string name="locationHint">e.g Home, Office</string>
    <string name="newConnection">New Connection</string>
    <string name="newConnectionShort">+</string>
     <string name="wrongchannel_type0">Wrong channel (range 1 - 4)</string>
 <string name=" wrongchannel_type1">Wrong channel. Should be with 5 digits - 11111</string>
   <string name="wrongchannel_type2">Wrong channel (range 1000 - 9999)</string>
    <string name="title_activity_new_connection">New Connection</string>
    <string name="clientID">Client ID</string>
    <string name="wrongclientid">Wrong Client ID</string>
    
    <string name="connectedto">Connected to </string>
    <string name="switchtype">SW Type</string>
    <string name="Disconnect">Disconnect</string>
    <string name="subscribe">Subscribe</string>
    <string name="publish">Publish</string>
    <string name="title_activity_subscribe">Subscribe</string>
    <string name="disconnected">Disconnected from</string>
    <string name="topic">Topic</string>
    <string name="history">History</string>
    <string name="title_activity_history">History</string>
    <string name="subscribed">Subscribed to </string>
    <string name="token">org.eclipse.paho.android.service.sample.ClientConnections</string>
    <string name="no_status">Unknown connection status to</string>
    <string name="connecting">Connecting to</string>
    <string name="disconnecting">Disconnecting from</string>
    <string name="connectionError">An error occurred connecting to</string>

    <string name="title_activity_publish">Publish</string>
    <string name="message">Message</string>
    <string name="qos0">0</string>
    <string name="qos1">1</string>
    <string name="qos2">2</string>
    <string name="empty"></string>
    <string name="qos">QOS</string>
    <string name="retained">Retained</string>
    <string name="cleanSession">Clean Session</string>
    <string name="advanced">Advanced Options</string>
    <string name="advancedShort">Advanced</string>
    <string name="title_activity_advanced">Advanced</string>
    <string name="uname">User Name</string>
    <string name="pass">Password</string>
    <string name="ssl">SSL</string>
    <string name="timeout">Time Out</string>
    <string name="keepalive">Keep Alive \nTimeout</string>

    <string name="title_activity_last_will">Last Will Message</string>
    <string name="setLastWill">Set Last Will Message</string>
    <string name="willMessage">Set Last Will Message</string>
    <string name="willMessageShort">Last Will</string>
    <string name="notifyTitle">MQTT Message Received</string>
    <string name="notifyTitle_connectionLost">MQTT Client Has Lost Connection</string>

    <string name="save">Save</string>
    <string name="title_activity_connection_details">Details</string>
    <string name="startLogging">Configuration Wizard</string>
    <string name="endLogging">Disable Logging</string>
	<string name="missingOptions">ClientID, server address or Port number is missing. Please correct or press back arrow cancel.</string>
   
    <string name='dateFormat'>dd/MM/yy \'at\' HH:mm:ss</string>
    <string name="unkown_error">Unknown Error</string>
    <string name="delete">Delete Connection</string>
    <string name="disconnectClient">Disconnect Client?</string> 
    <string name="deleteDialog">The selected client is currently connected or connecting, deleting this connection will cause it to be disconnected.</string>
    <string name="continueBtn">Continue</string>
    <string name="cancelBtn">Cancel</string>
    
    <!-- Strings that need formatting  -->
    <string name="messageRecieved">Received message %1$s &lt;br/&gt; &lt;small&gt;Topic: %2$s &lt;/small&gt; </string>
    <string name="timestamp">&lt;br/&gt; &lt;small&gt; %1$s &lt;/small&gt;</string>
    <string name="notification">%1$s has received %2$s on topic %3$s</string>
    <string name="toast_pub_success">Published message: %1$s to topic: %2$s</string>
    <string name="toast_sub_success">Subscribed to %1$s</string>
    <string name="toast_disconnected">Disconnected</string>
    <string name="toast_pub_failed">Failed to publish message: %1$s to topic: %2$s</string>
    <string name="toast_sub_failed">Failed to subscribe to %1$s</string>
    <string name="connection_lost">%1$s has lost connection to %2$s</string>
    <string name="failure_disconnect">Disconnect failed.&lt;br/&gt; &lt;small&gt;Reason: %s&lt;/small&gt; </string>
    <string name="failure_connect">Client failed to connect.&lt;br/&gt; &lt;small&gt;Reason: %s&lt;/small&gt;</string>
    <string name="client_connected">Client connected successfully</string>
    
    <!-- Hints -->
    <string name="serverURIHint">example.example.com</string>
    <string name="portHint">1883</string>
    <string name="contentDescriptionSSL">Enable SSL</string>
    <string name="contentDescriptionCleanSession">Clean Session</string>
    <string name="topicHint">hello</string>
    <string name="messageHint">Hello World</string>
    <string name="unameHint">user</string>
    <string name="passwordHint">password</string>
    <string name="timeoutHint">60</string>
    <string name="keepaliveHint">200</string>
    <string name="sslKeyLocaltion">file://</string>
    <string name="select">select</string>
     <string name="commands_prompt">Choose a command</string>
     <string-array name="commands">
        <item>switch@/11</item>
        <item>switch@/12</item>
        <item>switch@/13</item>
        <item>switch@/14</item>
        <item>switch@/21</item>
        <item>switch@/22</item>
        <item>switch@/23</item>
        <item>switch@/24</item>
        <item>switch@/31</item>
        <item>switch@/32</item>
        <item>switch@/33</item>
        <item>switch@/34</item>
        <item>switch@/41</item>
        <item>switch@/42</item>
        <item>switch@/43</item>
        <item>switch@/44</item>
    </string-array>
    
     
      <string-array name="messages">
        <item>ON</item>
        <item>OFF</item>
       
    </string-array>

</resources>
